discussion/kv_engine/172211/172211_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33549: Refactor cbstats ctor to call reset()

Rather than setting stats to their initial values in both
the constructor and in the reset() method, make the constructor call
reset() instead.

Change-Id: Id801d6d31e6342a7182d576f9c44cfc49f7064d2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-03-16 10:12:37.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-03-16 10:13:26.000000000
Message: 
Patch Set 13:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-16 10:32:44.000000000
Message: 
Patch Set 13: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16035/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.h:488:5: error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"? [clang-diagnostic-error]
    Hdr1sf20MBHistogram itemAllocSizeHisto;
    ^~~~~~~~~~~~~~~~~~~
    Hdr1sfInt32Histogram
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:606:7: note: "Hdr1sfInt32Histogram" declared here
class Hdr1sfInt32Histogram : public HdrHistogram {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16035/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16035/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44489/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\stats.h(488): error C3646: "itemAllocSizeHisto": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44489/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37450/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37450/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18130/ : FAILURE

Compile error at [2022-03-16T10:27:21.515Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: ?Hdr1sf20MBHistogram? does not name a type; did you mean ?Hdr1sfInt32Histogram??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18130/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26210/ : FAILURE

Compile error at [2022-03-16T10:27:35.908Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5692/ : FAILURE

Compile error at [2022-03-16T10:27:14.294Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5692/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18835/ : FAILURE

Compile error at [2022-03-16T10:26:53.040Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18835/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17803/ : FAILURE

Compile error at [2022-03-16T10:27:06.831Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: ?Hdr1sf20MBHistogram? does not name a type; did you mean ?Hdr1sfInt32Histogram??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17803/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16874/ : FAILURE

Compile error at [2022-03-16T10:26:59.407Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16874/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5750/ : FAILURE

Compile error at [2022-03-16T10:27:39.367Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: ?Hdr1sf20MBHistogram? does not name a type; did you mean ?Hdr1sfInt32Histogram??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5750/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14955/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
